# Ccalc-new

./: .clang_format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/lexer/tokenizers/: tokenizer.hpp  tokenizers.hpp
src/lexer/tokenizers/identifier/: identifier_tokenizer.cpp  identifier_tokenizer.hpp
src/lexer/tokenizers/keyword/: keyword_tokenizer.cpp  keyword_tokenizer.hpp
src/lexer/tokenizers/numeric/: numeric_tokenizer.cpp  numeric_tokenizer.hpp
src/lexer/tokenizers/operator/: operator_tokenizer.cpp  operator_tokenizer.hpp
src/lexer/tokenizers/whitespace/: whitespace_tokenizer.cpp  whitespace_tokenizer.hpp
src/reader/: reader.cpp  reader.hpp
test/: test_lexer.cpp  test_reader.cpp
